# Contest-Programming

./: CF_Planet_Lapituletti.cpp  CMakeLists.txt  CSES_Coin_Piles.cpp  CSES_Gray_Code.cpp  CSES_Increasing_Array.cpp  CSES_Weird_Algorithm.cpp  CodeJam_Moons_and_Umbrellas.cpp  readme.md
Book Code/Shanto/: 4.1 ins.cpp  4.1_insertion_sort.cpp  4.2_selection_sort.cpp  lol.c  lol.cpp  test.cpp
Book Code/Subin 52/: 16(flip of word).c  16.c  20.strtok.c  3.c  4.c  7(strtol).c  7.c  9.sqr_numb.c
Book Code/Subin part 2/: 1.1.c  1.2_digit_checker.c  1.3_adress.c  11.1_namota-2D-array.c  11.2-row_add-col_add-trans.c  11.3-understanding-2Dara.c  2.1_pointerbasic.c  2.2_pointer-address-value.c  2.3_pinter-adress-value-2.c  2.4_pointer-adrs-value-3.c  2.5_null-pointer.c  2.6_pointer-string.c  2.7_pointerofpointer.c  3.1-file.c  3.2-file-input.c  4.1_global-local.c  4.2_recurse1.c  4.2_recurse2.c  4.2_recurse3.c  4.3_Factorial.c  4.3_recurse_stat.c  4.4_febo.c  7.1.malloc.c  Insertation_sort.c  Untitled1.cpp  my_file.c  my_file.txt  out.txt  permutaed_string.c
CSES/: CSES_Bit_Strings.cpp  CSES_Missing_Number.cpp  CSES_Number_Spiral.cpp  CSES_Permutations.cpp  CSES_Repitations.cpp  CSES_Tower_of_Hanoi.cpp  CSES_Trailing_Zeros.cpp  CSES_Two_Knights.cpp  CSES_Two_Sets.cpp
Timus/: 1001.cpp  1083.cpp
bday wish/: t.cpp  tbday.cpp  tlove.cpp
codeforces/: A and B and Chess.c  ACM.cpp  Alex and broken contest.cpp  Amusing Joke.c  Anita_s Experiment.c  Anton and Danik.c  Arpa and a research in Mexican wave.c  Arpa and an exam about geometry.c  Beautiful Matrix.cpp  Beautiful Year.cpp  Bit++.c  Borya_s Diagonsis.cpp  Borze.c  Boy or girl.c  Bus.cpp  Declined Finalists.c  Declined Finalists.cpp  Div. 64.cpp  Diverse Team.cpp  Dragons.c  Fafa and his Company.c  Fafa and the Gates.c  Fafa and the Gates.cpp  Fair Game.cpp  Find Extra One.cpp  Five Dimensional Points.c  Football.c  Generous Kefa.c  George and Accommodation.c  Gleb And Pizza.c  Godsend.c  Gravity Flip.c  Karen and Game.c  Karen and Morning.c  Kirill And The Game.c  Lights Out.cpp  Marvolo Gaunt_s Ring.c  Marvolo Gaunt_s Ring.cpp  Position in Fraction.cpp  QAQ.cpp  (+51 more)
uva/: p100.cpp  uuu.txt
