# cmake_minimum_required(VERSION <specify CMake version here>)
project(CPP_Contest)

set(CMAKE_CXX_STANDARD 14)

add_executable(CPP_Contest CSES/main.cpp CSES/CSES_Weird_Algorithm.cpp CSES/CSES_Missing_Number.cpp CSES/CSES_Repitations.cpp CSES/CSES_Increasing_Array.cpp CSES/CSES_Permutations.cpp codeforces/CF_Planet_Lapituletti.cpp CSES/CSES_Number_Spiral.cpp CSES/CSES_Two_Knights.cpp CSES/CSES_Two_Sets.cpp CSES/CSES_Bit_Strings.cpp CSES/CSES_Trailing_Zeros.cpp CSES/CSES_Coin_Piles.cpp CSES/CSES_Gray_Code.cpp CSES/CSES_Tower_of_Hanoi.cpp CodeJam_Moons_and_Umbrellas.cpp)
add_executable(CSES_Weird_Algorithm CSES/CSES_Weird_Algorithm.cpp)
add_executable(CSES_Missing_Number CSES/CSES_Missing_Number.cpp)
add_executable(CSES_Repitations CSES/CSES_Repitations.cpp)
add_executable(CSES_Increasing_Array CSES/CSES_Increasing_Array.cpp)
add_executable(CSES_Permutations CSES/CSES_Permutations.cpp)
add_executable(CF_Planet_Lapituletti codeforces/CF_Planet_Lapituletti.cpp)
add_executable(CSES_Number_Spiral CSES/CSES_Number_Spiral.cpp)
add_executable(CSES_Two_Knights CSES/CSES_Two_Knights.cpp)
add_executable(CSES_Two_Sets CSES/CSES_Two_Sets.cpp)
add_executable(CSES_Bit_Strings CSES/CSES_Bit_Strings.cpp)
add_executable(CSES_Trailing_Zeros CSES/CSES_Trailing_Zeros.cpp)
add_executable(CSES_Coin_Piles "CSES/CSES_Coin_Piles.cpp")
add_executable(CSES_Gray_Code CSES/CSES_Gray_Code.cpp)
add_executable(CSES_Tower_of_Hanoi CSES/CSES_Tower_of_Hanoi.cpp)

add_executable(CodeJam_Moons_and_Umbrellas CodeJam_Moons_and_Umbrellas.cpp)